:hammer: Fix issue with dropdown menu being cropped on smaller screens

--- a/src/app/components/banner.module.css
+++ b/src/app/components/banner.module.css
@@ -22,7 +22,7 @@
     bottom: 5%;
     left: 5%;
     color: white;
-    z-index: 100;
+    z-index: 10;
 }
 
 /* Mobile Phones - flex-direction: column-reverse */
