--- a/src/app/components/dropdown.module.css
+++ b/src/app/components/dropdown.module.css
@@ -11,8 +11,7 @@
 
 .list-container{
     cursor: pointer;
-    position: absolute;
-    margin-right: -1rem;
+    position: fixed;
     margin-top: 0;
     right: 0;
     list-style: none;
@@ -20,10 +19,12 @@
     color: var(--font);
     z-index: 100;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .nav-list{
-    padding: .5rem 1rem;
+    padding: .3rem 1rem;
 }
 
 .nav-list:hover{
@@ -71,5 +72,19 @@
   /* Large Desktops */
   @media (min-width: 1440px) {
     
+  }
+
+  @media (max-height: 430px)
+  {
+    .list-container{
+        flex-direction: row;
+        width: 100vw;
+        
+        justify-content: space-around;
+    }
+
+    .nav-list{
+        padding: .3rem .3rem;
+    }
   }
   
